comments section v-align fix

--- a/src/components/Photo/Photo.css
+++ b/src/components/Photo/Photo.css
@@ -1,4 +1,3 @@
-
 .photo-modal {
   position: fixed;
   top: 0;
@@ -21,13 +20,13 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 100%;
+  width: 70%;
 }
 
 .photo-modal .main {
   display: flex;
   align-items: flex-start;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
 }
 
@@ -42,7 +41,6 @@
   max-height: 80vh;
   object-fit: contain;
 }
-
 
 .photo-modal .nav {
   position: absolute;
@@ -60,7 +58,6 @@
 .photo-modal .nav.next {
   right: 10px;
 }
-
 
 .photo-modal .info {
   width: 30%;
@@ -81,7 +78,6 @@
   cursor: pointer;
 }
 
-
 .photo-modal .author {
   display: flex;
   align-items: center;
@@ -100,9 +96,8 @@
   text-decoration: none;
 }
 
-
 .photo-modal .comments {
-  width: 70%;
+  width: 100%;
   max-height: 30vh;
   overflow-y: auto;
   margin-top: 20px;
